--- a/gesture_pacman_web/templates/video_off.html
+++ b/gesture_pacman_web/templates/video_off.html
@@ -32,7 +32,7 @@
             When you click the start game button below,
             your video will turn on. Use gestures that are shown on the right
             of the game to control PacMan. The gestures are evalated with
-            a deep learning LSTM model. You will see a feed on top of the 
+            a deep learning CNN model. You will see a feed on top of the 
             frame showing the last few predicted gestures, along with visual
             representation of how confident the model is that you are 
             showing each of the gestures.
